...
///////////////////////////////////////////////////////////////////////////////////////////
#pragma mark - Lifecycle

- (instancetype)initWithStyle:(UITableViewStyle)style {
    if ((self = [super initWithStyle:style])) {
        self.title = @"PSPDFKit Catalog";
        self.navigationItem.backBarButtonItem = [[UIBarButtonItem alloc] initWithTitle:@"Catalog" style:UIBarButtonItemStylePlain target:nil action:nil];

        // We need to call this before the view loads initially
        [self applyCatalogAppearanceUsingCustomTinting:YES];

        [self addKeyCommand:[UIKeyCommand keyCommandWithInput:@"f" modifierFlags:UIKeyModifierCommand action:@selector(beginSearch:) discoverabilityTitle:@"Search"]];
    }
...
